--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
-    <title>--淫趴俱乐部---</title>
+    <title>--XROM---</title>
     <meta name='robots' content='max-image-preview:large' />
 	<link rel='dns-prefetch' href='//s.w.org' />
-	<meta name="keywords" content="视频引导页">
-	<meta name="description" content="视频引导页">
+	<meta name="keywords" content="Xrom 直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜">
+	<meta name="description" content="Xrom 直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜">
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
     <link rel="stylesheet" type="text/css" href="static/css/media.css">
 </head>
 <body>
 	<header id="header">
 		<div class="header_left">
-		    <img src="static/img/logo.png" alt="欧皇源码网" title="欧皇源码网" style="display:none;">
-			淫趴俱乐部
+		    <img src="static/img/logo.png" alt="XROM" title="XROM" style="display:none;">
+			XROM
 		</div>
 		<div class="header_right" id="background_voice">
 			<img src="static/img/unmute.png" title="打开">
@@ -29,23 +29,25 @@
 		<div id="overlay"></div>
 		<section id="main_content">
 			<div id="head">
-				<h1>淫趴俱乐部 </h1>
-				<p class="sub_head">我们致力打造一个优秀的建站资源分享与技术交流学习平台！</p>
-				<p class="info">（源码资源，应有尽有）</p>
+				<h1>XROM </h1>
+				<p class="sub_head">我们致力打造一个优秀狼友平台！</p>
+				<p class="info">（直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜）</p>
 			</div>
 			<div id="links">
-				<a href="https://www.ym51.cn" target="_blank">淫趴俱乐部</a>
-				<a href="https://www.ym51.cn" target="_blank">资源网</a>
-				<a href="https://www.ym51.cn" target="_blank">视频解析</a>
-				<a href="https://www.ym51.cn" target="_blank">源码下载</a>
-				<a href="https://www.baidu.com" target="_blank">百度一下</a>
+				<a href="https://xrom.plus" target="_blank">色情导航站</a>
+				<a href="https://xone.buzz" target="_blank">网红黑料</a>
+				<a href="https://xgo.today" target="_blank">偷拍自白</a>
+				<a href="https://xonly.club" target="_blank">精品资源</a>
+				<a href="https://okseo.xyz" target="_blank">必看大瓜</a>
+				<a href="https://okseo.store" target="_blank">午夜影视</a>
+				<a href="https://xonly.live" target="_blank">直播平台</a>
 			</div>
 			<div style="position: absolute;color: white;"></div>
 		</section>
 	</div>
 	<div id="footer">
 		<span class="info">
-			Copyright&nbsp;&nbsp;©&nbsp;&nbsp;2019-2022&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://beian.miit.gov.cn" target="_blank">京ICP备000000003号</a>
+			Copyright&nbsp;&nbsp;©&nbsp;&nbsp;2019-2025&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://t.me/xrom_0x0000001" target="_blank">商务合作</a>
 		</span>
 	</div>
     <script src="static/js/bideo.js"></script>
