Update header and links in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header id="header">
 		<div class="header_left">
 		    <img src="static/img/logo.png" alt="XROM" title="XROM" style="display:none;">
-			XROM
+			XROM-淫趴俱乐部
 		</div>
 		<div class="header_right" id="background_voice">
 			<img src="static/img/unmute.png" title="打开">
@@ -29,15 +29,15 @@
 		<div id="overlay"></div>
 		<section id="main_content">
 			<div id="head">
-				<h1>XROM </h1>
+				<h1>XROM-淫趴俱乐部 </h1>
 				<p class="sub_head">我们致力打造一个优秀狼友平台！</p>
-				<p class="info">（直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜）</p>
+				<p class="info"> 直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜 </p>
 			</div>
 			<div id="links">
-				<a href="https://xrom.plus" target="_blank">色情导航站</a>
+				<a href="https://xrom.plus" target="_blank">导航资源网</a>
 				<a href="https://xone.buzz" target="_blank">网红黑料</a>
 				<a href="https://xgo.today" target="_blank">偷拍自白</a>
-				<a href="https://xonly.club" target="_blank">精品资源</a>
+				<a href="https://xonly.club" target="_blank">精品资源（站长推荐）</a>
 				<a href="https://okseo.xyz" target="_blank">必看大瓜</a>
 				<a href="https://okseo.store" target="_blank">午夜影视</a>
 				<a href="https://xonly.live" target="_blank">直播平台</a>
