--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<div id="overlay"></div>
 		<section id="main_content">
 			<div id="head">
-				<h1>XROM-淫趴俱乐部 </h1>
-				<p class="sub_head">我们致力打造一个优秀狼友平台！</p>
+				<h1>xrom.video 聪明人都记住了 </h1>
+				<p class="sub_head">我们致力打造优秀狼友平台！</p>
 				<p class="info"> 直播大秀 吃瓜新闻 道德伦理 偷拍自白 海外吃瓜 学生校园 网红黑料 必看大瓜 </p>
 			</div>
 			<div id="links">
@@ -47,7 +47,7 @@
 	</div>
 	<div id="footer">
 		<span class="info">
-			Copyright&nbsp;&nbsp;©&nbsp;&nbsp;2019-2025&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://t.me/xrom_0x0000001" target="_blank">商务合作</a>
+			免责声明:&nbsp;&nbsp;若本站收录的资源侵犯了您的权益，&nbsp;&nbsp;请联络我们及时删除内容 &nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://t.me/xrom_0x0000001" target="_blank">商务合作</a>
 		</span>
 	</div>
     <script src="static/js/bideo.js"></script>
